# plugins

./: .gitignore  README.md  patch_plugin_dylib.sh  plugins.conf  plugins.pri  plugins.pro
graphicalquerybuilder/paal/: .clang-format  .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  README  TODO
graphicalquerybuilder/paal/examples/: CMakeLists.txt
graphicalquerybuilder/paal/examples/auctions/: demand_query_example.cpp  gamma_oracle_example.cpp  single_minded_example.cpp  value_query_example.cpp  xor_bids_example.cpp
graphicalquerybuilder/paal/examples/clustering/: k_means_clustering_engine_example.cpp  k_means_clustering_engine_start_from_clusters_example.cpp  k_means_clustering_example.cpp
graphicalquerybuilder/paal/examples/data_structures/: components_example.cpp
graphicalquerybuilder/paal/examples/distance_oracle/: distance_oracle_example.cpp
graphicalquerybuilder/paal/examples/dynamic/: knapsack_0_1_example.cpp  knapsack_0_1_no_output_example.cpp  knapsack_0_1_on_size_fptas_example.cpp  knapsack_0_1_on_size_fptas_no_output_example.cpp  knapsack_0_1_on_value_fptas_example.cpp  knapsack_0_1_on_value_fptas_no_output_example.cpp  knapsack_unbounded_example.cpp  knapsack_unbounded_on_size_fptas_example.cpp  knapsack_unbounded_on_value_fptas_example.cpp
graphicalquerybuilder/paal/examples/greedy/: budgeted_maximum_coverage_example.cpp  k_center_euclidean_metric_example.cpp  k_center_example.cpp  k_cut_example.cpp  knapsack_0_1_two_app_example.cpp  knapsack_unbounded_two_app_example.cpp  max_coverage_example.cpp  scheduling_jobs_example.cpp  scheduling_jobs_on_identical_parallel_machines_example.cpp  scheduling_jobs_with_deadlines_on_a_single_machine_example.cpp  set_cover_example.cpp  shortest_superstring_example.cpp  steiner_tree_greedy_example.cpp
graphicalquerybuilder/paal/examples/iterative_rounding/: bounded_degree_mst_example.cpp  generalised_assignment_example.cpp  iterative_rounding_example.cpp  steiner_network_example.cpp  steiner_tree_ir_example.cpp  tree_augmentation_example.cpp
graphicalquerybuilder/paal/examples/linear_programming/: lp_example.cpp
graphicalquerybuilder/paal/examples/local_search/: 2_local_search_example.cpp  capacitated_facility_location_example.cpp  facility_location_example.cpp  k_median_example.cpp  local_search_example.cpp  local_search_lambda_example.cpp  local_search_lambda_sa_tabu_example.cpp  n_queens_example.cpp
graphicalquerybuilder/paal/examples/miscellaneous/: dreyfus_wagner_example.cpp  zelikovsky_11_per_6_example.cpp
graphicalquerybuilder/paal/examples/regression/: lsh_nearest_neighbors_regression_efficient_example.cpp  lsh_nearest_neighbors_regression_example.cpp
graphicalquerybuilder/paal/examples/sketch/: frequent_directions_example.cpp
graphicalquerybuilder/paal/examples/utility/: functors_example.cpp  fusion_algorithms_example.cpp
graphicalquerybuilder/paal/include/paal/lp/: glp.hpp  (+6 more)
(+188 files in other folders)
